# slim-runner

./: .gitignore  Cargo.toml  README.md  example_custom_script.scm  example_script.slim  example_slim_config.toml  flake.nix
src/: grid.rs  main.rs
src/grid/: cmditer.rs  mod.rs
